0.4.8
- Fix: Deletion of content elements in front-end editing mode fails (#322)
- Change: Rename the registration link from "register online" to "register now" (#405)
- Feature: Registration form: Add a field for the name of additional attendees (#377)
- Fix: Localisation for early bird prices (#325)
- Feature: Add a switch to allow multiple registrations (#375)
- Fix: In the registration record BE editing, the drop-down field "payment methods" needs to have a blank (default) entry. (#397)
- Fix: Seminars with open end are displayed as being till 00:00h
- Feature: Configuration check for plugin.tx_seminars_pi1.listView (#333)
- Fix: uid and seats cannot be hidden using plugin.tx_seminars.hideFieldsInThankYouMail (#389)
- Fix: Typo in the configuration check (#387)
- Fix: Event still open for registration after registration deadline is over (#348)
- Fix: Configuration check warning with showFeUserFieldsInNotificationMail (#359)
- Code cleanup and refactoring (#351)
- Feature: Allow manual sorting of event records in the BE (#350)
- Feature: Allow for cent prices (#324)
- Fix: Make the DB selector boxes a bit higher (#369)
- Fix: In the topic drop-down of event date records, the entries should be sorted alphabetically (#355)
- Fix: The configuration check doesn't always recognize FE pages (#356)

0.4.7 (released 2006-11-19)
- Feature: Automatic configuration check (#273)
- Fix: Error with suggested extensions when installing tx_seminars (#345)
- Improved the manual.
- Feature: Allow to use select boxes instead of the page browser e.g. for speakers (#331)
- Feature: Early bird prices (#325)
- Feature: Add "topic" and "date" event subtypes (#298)
- Fix: Conflict with direct_mail 2.1.5 (#320)
- Fix: error on search in TYPO3 3.8.1 (#306)
- Changed TCA to allow prices >=10000 (#319)
- Fix: Add check to registration form (#292)
- Code cleanup and refactoring (#239)
- Fix: Include some TS configurations in the static template (#284)