@@ -40,6 +40,10 @@
 										<numIndex index="0">LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.list_vip_registrations</numIndex>
 										<numIndex index="1">list_vip_registrations</numIndex>
 									</numIndex>
+									<numIndex index="8" type="array">
+										<numIndex index="0">LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.my_entered_events</numIndex>
+										<numIndex index="1">my_entered_events</numIndex>
+									</numIndex>
 								</items>
 								<size>1</size>
 								<maxitems>1</maxitems>
