@@ -8,6 +8,11 @@
 </p>
 <!-- ###MESSAGE_MY_VIP_EVENTS### -->
 
+<!-- ###MESSAGE_MY_ENTERED_EVENTS### --><p>
+  ###LABEL_MYENTEREDEVENTS###
+</p>
+<!-- ###MESSAGE_MY_ENTERED_EVENTS### -->
+
 <!-- ###LIST_HEADER### --><div###CLASS_EVENTLIST###>
   <table>
     <thead>
